# Noctum

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  config.example.toml  install.sh  noctum.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs  repo_config.rs
src/analyzer/: mod.rs  ollama.rs
src/config/: mod.rs
src/daemon/: idle.rs  mod.rs
src/db/: mod.rs  models.rs
src/diagram/: extractor.rs  generator.rs  mod.rs
src/language/: mod.rs  rust.rs  typescript.rs
src/mutation/: analyzer.rs  executor.rs  mod.rs
src/project/: mod.rs
src/web/: handlers.rs  mod.rs  templates.rs
templates/: base.html  dashboard.html  mutation_results.html  repositories.html  repository_architecture.html  repository_diagrams.html  repository_files.html  repository_results.html  results.html  settings.html
