[package]
name = "noctum"
version = "0.1.0"
edition = "2021"
description = "A local-first, AI-powered code analyzer that runs during idle time"
license = "MIT"
repository = "https://github.com/SeanCheatham/Noctum"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# HTTP client (for Ollama API)
reqwest = { version = "0.12", features = ["json"] }

# System monitoring (for idle detection)
sysinfo = "0.31"

# CLI
clap = { version = "4", features = ["derive"] }

# Templating
askama = "0.12"

[dev-dependencies]
tempfile = "3"
